
    o	The postscript() and pdf() devices will now allow lwd values
	less than 1 (they used to force such values to be 1).

    o	Fixed font face for CID fonts in pdf() graphics output. (PR#14326)

    o	GERaster() now checks for width or height of zero and does
	nothing in those cases; previously the behaviour was
	undefined, probably device-specific, and possibly dangerous.

    o	Improperly calling Recall() from outside a function could cause a
	segfault.  (Reported by Robert McGehee.)



		CHANGES IN R VERSION 2.11.1


NEW FEATURES

    o	R CMD INSTALL checks if dependent packages are available early on
	in the installation of source packages, thereby giving clearer
	error messages.

    o	R CMD INSTALL --build now names the file in the format used
	for Mac OS X binary files on that platform.

    o	BIC() in package stats4 now also works with multiple fitted models,
	analogously to AIC().


DEPRECATED & DEFUNCT

    o	Use of file extension .C for C++ code in packages is now
	deprecated: it has caused problems for some 'make's on
	case-insensitive file systems (although it currently works
	with the recommended toolkits).


INSTALLATION

    o	Command 'gnutar' is preferred to 'tar' when configure sets
	TAR.  This is needed on Mac OS 10.6, where the default tar,
	bsdtar 2.6.2, has been reported to produce archives with
	illegal extensions to tar (according to the POSIX standard).


BUG FIXES

    o	The C function mkCharLenCE now no longer reads past 'len' bytes
	(unlikely to be a problem except in user code). (PR#14246)

    o	On systems without any default LD_LIBRARY_PATH (not even
	/usr/local/lib), [DY]LIB_LIBRARY_PATH is now set without a
	trailing colon.	 (PR#13637)

    o	More efficient utf8ToInt() on long multi-byte strings with
	many multi-byte characters.  (PR#14262)

    o	aggregate.ts() gave platform-dependent results due to rounding
	error for ndeltat != 1.

    o 	package.skeleton() sometimes failed to fix filenames for .R or