@@ -25,7 +25,7 @@ list_files_with_type(dir, type, all.files = FALSE,
 }
 \arguments{
   \item{x}{character vector giving file paths.}
-  \item{compression}{logical: should compresssion extension \file{.gz},
+  \item{compression}{logical: should compression extension \file{.gz},
     \file{.bz2} or \file{.xz} be removed first?}
   \item{dir}{a character string with the path name to a directory.}
   \item{exts}{a character vector of possible file extensions.}
