@@ -273,9 +273,9 @@ read.delim2(file, header = TRUE, sep = "\t", quote="\"", dec=",",
   although \code{fileEncoding} can be used to specify the encoding of
   the input file (or a connection can be specified which re-encodes),
   the implied re-encoding must be possible.  This is not a problem in
-  UTF-8 locales, but it can be on Windows---other tools such as
-  \code{\link{readLines}} and \code{\link{scan}} be used to avoid this
-  limitation.
+  UTF-8 locales, but it can be on Windows---\code{\link{readLines}} or
+  \code{\link{scan}} be used to avoid this limitation since they have
+  special provisions to convert input to UTF-8.
 }
 
 \seealso{
